# LLMRoleplayChatroom

./: .env  .gitattributes  README.md  character_sheet.txt  design_document.md  game.py  input_data.json  level.txt  pyproject.toml  report.md
chatroom_app/: db.py  main.py
chatroom_app/data/: character_sheets.json  crewai_outputs.json  openai_outputs.json  topics.json
chatroom_app/pages/: game.py
outputs/: critique.txt  persona_response.txt  refined_response.txt  topic.txt
src/: character_sheet.txt
src/class_project/: crew.py  crewai_pipeline.py  direct_openai_pipeline.py  main.py  wrapper.py
src/class_project/config/: agents.yaml  tasks.yaml
