[project]
name = "class_project"
version = "0.1.0"
description = "class-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0"
]

[project.scripts]
class_project = "class_project.main:run"
run_crew = "class_project.main:run"
train = "class_project.main:train"
replay = "class_project.main:replay"
test = "class_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
